image, title and inputs
stylizing login image, title and inputs

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <main>
             <section class="login">
-                <img src="./images/logo.png" alt="login_logo">
-                <h1 class="login_tittle">Fazer login</h1>
+                <img src="./images/logo.png" class="login_logo">
+                <h1 class="login_title">Fazer login</h1>
                 <label class="login_label">
                     <span>nome de usuário</span>
                     <input type="text" name="username" class="input">
